Project_Flask/Day_Four/K8s-networking/network-policies/allow-front-to-back.yaml
apiVersion: networking.K8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: backend
  name: allow-front-to-back
spec:
  podSelector: {}
  policyTypes:
    - Ingress 
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            role: frontend
