Project_Flask/Day_Four/K8s-networking/network-policies/deny-all-policies.yaml
apiVersion: networking.K8s.io/v1
kind: NetworkPolicy
metadata: 
  namespace: backend
  name: deny-all-ingress
spec:
  podSelector: {}
  policyTypes:
   - Ingress
